testsuite/positive/bug-1009.n
using System.Console;

class A[T]
{
  public static Test2() : void { WriteLine("A[T].Test2()"); }
}

class A
{
  public static Test1() : void { WriteLine("A.Test1()"); }
}

class B
{
  public static Test1() : void { WriteLine("B.Test1()"); }
}

class B[T]
{
  public static Test2() : void { WriteLine("B[T].Test2()"); }
}

module Program
{
  Main() : void
  {
    A.Test1();
    A.[int].Test2();
    B.Test1();
    B.[int].Test2();
    //_ = ReadLine();
  }
}

/*
BEGIN-OUTPUT
A.Test1()
A[T].Test2()
B.Test1()
B[T].Test2()
END-OUTPUT
*/
