testsuite/negative/constraints.n
using System;
using System.Console;
using Nemerle.Utility;

public module Program
{
  Main() : void
  {
    mutable str1 : string;
    mutable str2 : string = "test";
    mutable val1 : int? = 1;
    mutable val2 : int? = null;
    mutable val3 : int = 1;
    
    WriteLine(str1.IsNull());
    WriteLine(str2.IsNull());
    WriteLine(val1.IsNull());
    WriteLine(val2.IsNull());
    WriteLine(val3.IsNull()); //E: must be a reference type in order to use it as type parameter
    _ = ReadLine();
  }
 
  public IsNull[T](this x : T?) : bool
    where T: struct
  {
    !x.HasValue
  }

  public IsNull[T](this x : T) : bool
    where T: class
  {
    x == null
  }
}
